--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "lib": ["es2015", "es2016", "es2017", "es2018"],
+    "lib": ["es2015", "es2016", "es2017"],
     "strict": true,
-    "esModuleInterop": true
+    "outDir": "./build",
+    "noImplicitAny": true
   }
 }
